# ntuai-rag-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/uploads/: sample_sources.md
notebooks/: Getting_started_with_google_colab_ai.ipynb
src/telegram_rag_chatbot/: __init__.py  bot.py  chunking.py  config.py  loaders.py  prompts.py  rag.py
tests/: test_bot_utils.py  test_chunking.py  test_loaders.py  test_prompts.py  test_rag.py
