[project]
name = "telegram-rag-chatbot"
version = "0.1.0"
description = "Telegram RAG chatbot powered by Gemini, LangChain, and ChromaDB"
readme = "README.md"
authors = [
    { name = "viiccwen", email = "viiccwen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "langchain-text-splitters>=0.3.9",
    "pypdf>=5.9.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=21.11.1",
]

[project.scripts]
telegram-rag-chatbot = "telegram_rag_chatbot.bot:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
